# algorithmic-trading-polymarket

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  first-run-setup.sh  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
alpha-executor/: Dockerfile  package-lock.json  package.json  tsconfig.json
alpha-executor/src/: clob-client.ts  config.ts  index.ts  kelly.ts  position-manager.ts  risk-manager.ts  signal-processor.ts  signer.ts
alpha-executor/tests/: kelly.test.ts  (+5 more)
btc-5m/: package-lock.json  package.json
btc-5m-latency/: package-lock.json  package.json
btc-5m-momentum/: Dockerfile  package-lock.json  package.json
crypto-signals/: Dockerfile  package-lock.json  package.json
dashboard/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
docs/: CONFIGURATION.md  DEMO_MODE.md  DEPLOY_RUNBOOK.md  ROADMAP.md  SAFETY.md  WALLET_SETUP.md
execution/: package-lock.json  package.json
ingestion/: Cargo.toml  Dockerfile
ingestion/src/: config.rs  error.rs  main.rs  market_fetcher.rs  redis_store.rs  types.rs  websocket.rs
scripts/: check-window.js  cron-check-window.sh  demo-seed.sh  derive-keys.js  doctor.sh  package-lock.json  package.json  test-all.sh
settlement/: package-lock.json  package.json
shared/: package-lock.json  package.json
signal-core/: Cargo.toml  Dockerfile
signal-core/src/: config.rs  main.rs  redis_client.rs  scanner.rs  types.rs
sports-signals/: Dockerfile  package-lock.json  package.json
(+157 files in other folders)
