[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"
authors = ["Trading Bot Team"]
description = "WebSocket consumer for Polymarket order book data"

[dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
anyhow = "1.0"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
